[tool.poetry]
name = "cc-be"
version = "0.1.0"
description = ""
authors = ["Ryan Allen <rcallen89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_socketio = "^4.3.0"
pylint = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
