[tool.poetry]
name = "cc-be"
version = "0.1.0"
description = ""
authors = ["Ryan Allen <rcallen89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask_socketio = "^4.3.0"
flask-restx = "^0.2.0"
pymongo = "^3.10.1"
flask-mongoengine = "^0.9.5"
python-dotenv = "^0.13.0"
pytest-cov = "^2.9.0"
dnspython = "^1.16.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
pytest = "^5.4.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
